# C-Codes

./: .gitignore  README.md  Robot.java  citys array.c  makefile  messageUtils.h  sortUtils.c  sortUtils.h  utils.h
C/: citys array.c  exercicio moodle.c  sort.c  utils.c  utils.h
Haskell/: exercicios.hs
JavaScript/: Color.html  Utils  Utils.js  colorfy.ts
SO/: specifics.c  specifics.h
bubbleSort/: bubbleSort.c  bubbleSort.h  makefile  testSort.c
chainedList/: chainedList.c  chainedList.h  testChainedList.c
chainedQueue/: chainedQueue.c  chainedQueue.h  makefile  testChainQueue.c
chainedStack/: chainedStack.c  chainedStack.h  testChainStack.c
doubleChainedList/: doubleChainedList.c  doubleChainedList.h  makefile  testChain.c
doubleEndedQueue/: deque.c  deque.h  testDeque.c
hasValidParentesis/: hasValidParentesis.h  isValidParentesis.c  test.bat  testExpressions.c
insertionSort/: insertionSort.c  insertionSort.h  makefile  testSort.c
mergeSort/: mergeSort.c  mergeSort.h
queue/: queue.h
queueIsEvenOdd/: test.bat  test.c
quickSort/: quickSort.c  quickSort.h  testSort.c
random/: random.c  random.h
selectionSort/: makefile  selectionSort.c  selectionSort.h  testSort.c
sortFunctions/: sortUtils.c  sortUtils.h
sortFunctions/quickSort/: CMakeLists.txt  makefile  quickSort.c  quickSort.h  testSort.c
sortsBenchmark/: benchmark.c  makefile
stack/: makefile  stack.c  stack.h  testStack.c
textualGUI/: demo.c  specifics.c  specifics.h  test.bat  textualGUI.c  textualGUI.h
tree/: makefile  tree.c  tree.h  treeTest.c
twoStack/: twoStack.c  (+1 more)
(+94 files in other folders)
